--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <header>Header</header>
     <!-- Main - The main element is where our main content goes. This includes headings, paragraphs, images, etc. -->
     <main>Main Content</main>
+    <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur eius iusto quis laboriosam. Similique pariatur temporibus in animi voluptates, debitis natus repudiandae repellendus vero quis placeat voluptatum quod consequatur officia.</h1>
     <!-- Footer - The footer provides links to social media, contact and copyright information -->
     <footer>Footer</footer>
 </body>
