Add logo to header and apply Oswald font

--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
 
 <body>
     <!-- Header - The header is where we place our navigation links, and our H1 heading along with our logo -->
-    <header>Header</header>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+        </a>
+    </header>
+
     <!-- Main - The main element is where our main content goes. This includes headings, paragraphs, images, etc. -->
     <main>Main Content</main>
-    <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur eius iusto quis laboriosam. Similique pariatur temporibus in animi voluptates, debitis natus repudiandae repellendus vero quis placeat voluptatum quod consequatur officia.</h1>
+    
     <!-- Footer - The footer provides links to social media, contact and copyright information -->
     <footer>Footer</footer>
 </body>
