--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
     <main>Main Content</main>
     
     <!-- Footer - The footer provides links to social media, contact and copyright information -->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+    </footer>
+
+    <!-- Font Awesome Kit  -->
+    <script src="https://kit.fontawesome.com/45107b1f9b.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
