--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" name="nav-toggle" id="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
@@ -39,7 +39,7 @@
     
     <!-- Footer - The footer provides links to social media, contact and copyright information -->
     <footer>
-        <ul>
+        <ul id="social-networks">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="https://x.com/" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a></li>
             <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a></li>
