--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,7 @@
     </header>
 
     <!-- Main - The main element is where our main content goes. This includes headings, paragraphs, images, etc. -->
-    <main>Main Content</main>
+    <main></main>
     
     <!-- Footer - The footer provides links to social media, contact and copyright information -->
     <footer>
