--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     </header>
 
     <!-- Main - The main element is where our main content goes. This includes headings, paragraphs, images, etc. -->
-    <main>Main Content</main>
+    <main>
+        <section id="hero"></section>
+    </main>
     
     <!-- Footer - The footer provides links to social media, contact and copyright information -->
     <footer>
