Add cover text with club name and locations

--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
 
     <!-- Main - The main element is where our main content goes. This includes headings, paragraphs, images, etc. -->
     <main>
-        <section id="hero"></section>
+        <section id="hero">
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Dublin Docklands & Phoenix Park</h3>
+            </div>
+
+            </div>
+        </section>
     </main>
     
     <!-- Footer - The footer provides links to social media, contact and copyright information -->
