--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!-- Title -->
     <title>Love Running</title>
@@ -14,7 +15,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <!-- Stylesheet-->
-     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -28,22 +29,46 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="gallery.html"  class="active">Gallery</a></li>
+                <li><a href="gallery.html" class="active">Gallery</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- Main - The main element is where our main content goes. This includes headings, paragraphs, images, etc. -->
-    <main>Main Content</main>
-    
+    <main>
+        <section id="gallery">
+            <div id="photos">
+                <img src="assets/images/athletes.webp" alt="Two athletes running together">
+                <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
+                <img src="assets/images/runner3.webp" alt="Solo male runner jogging on beach">
+                <img src="assets/images/man.webp" alt="Man at charity paint running festival">
+                <img src="assets/images/runner1.webp" alt="Solo female runner jogging through Phoenix Park">
+                <img src="assets/images/runner2.webp" alt="Runners competing in marathon">
+                <img src="assets/images/runner4.webp" alt="Solo female runner jogging on beach">
+                <img src="assets/images/running_gang.webp"
+                    alt="Large group of runners taking part in a marathon on a rainy day">
+                <img src="assets/images/mud-run.webp"
+                    alt="Two women runners taking a muddy selfie after the Mud Runners championship">
+            </div>
+        </section>
+    </main>
+
     <!-- Footer - The footer provides links to social media, contact and copyright information -->
     <footer>
         <ul id="social-networks">
-            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://x.com/" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a></li>
-            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li><a href="https://x.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></a></li>
+            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Youtube page (opens in a new tab)"><i
+                        class="fa-brands fa-square-youtube"></i></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a></li>
         </ul>
     </footer>
 
