--- a/signup.html
+++ b/signup.html
@@ -41,13 +41,13 @@
             <form id="signup-form" action="https://formdump.codeinstitute.net" method="post">
                 <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!</h2>
                 <label for="first-name">First Name</label>
-                <input type="text" name="first_name" id="first-name" required>
+                <input type="text" name="first_name" id="first-name" class="text-input" required>
                 <br>
                 <label for="last-name">Last Name</label>
-                <input type="text" name="last_name" id="last-name" required>
+                <input type="text" name="last_name" id="last-name" class="text-input" required>
                 <br>
                 <label for="email-address">Email Address</label>
-                <input type="text" name="email_address" id="email-address" required>
+                <input type="text" name="email_address" id="email-address" class="text-input" required>
                 <br>
                 <div class="radio-buttons">
                     <div>
