--- a/signup.html
+++ b/signup.html
@@ -47,7 +47,7 @@
                 <input type="text" name="last_name" id="last-name" class="text-input" required>
                 <br>
                 <label for="email-address">Email Address</label>
-                <input type="text" name="email_address" id="email-address" class="text-input" required>
+                <input type="email" name="email_address" id="email-address" class="text-input" required>
                 <br>
                 <div class="radio-buttons">
                     <div>
